# FileServer

./: Client.cpp  LRU.h  Makefile  Server.cpp  aes_iv  aes_key  team.c
client/: Client.cpp  Makefile  aes_iv  aes_key  base64.h  buffer.c  buffer.h  crypto.h  myfile.enc  private.pem  public.pem  util.h
client/obj64/: Client  Client.d  buffer.d
obj64/: Client  Client.d  Server
server/: CMakeLists.txt  LRU.h  Makefile  Server.cpp  a.txt  buffer.h  c.txt  util.h
server/obj64/: Server  Server.d
